@@ -5,11 +5,15 @@ changelog: https://github.com/wesnoth/wesnoth/blob/1.12/changelog
 Version 1.11.11+dev:
  * Language and i18n:
    * Updated translations: German, Scottish Gaelic, Slovak.
-   
+
  * Units:
    * Increased the experience requirement for the Rami from 32 to 39.
    * Increased the experience requirement for the Saree from 56 to 64.
-   
+
+ * Miscellaneous and bug fixes:
+   * Fixed halos glitching through locations that become shrouded after the
+     halo is rendered for the first time.
+
 
 Version 1.11.11:
  * Campaigns:
